<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maps_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:context="com.iamstelios.songle.MapsActivity"
        map:layout_constraintHorizontal_bias="0.0"
        map:layout_constraintVertical_bias="0.0" />

    <!-- Use of FrameLayout to change the size (bigger) of the floating action button-->
    <FrameLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/skipSongButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            app:backgroundTint="@color/primary_light"
            app:fabSize="mini"
            app:srcCompat="@drawable/fast_forward_icon" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:fabSize="mini"
            app:srcCompat="@drawable/music_sign" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/lyricsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            app:backgroundTint="@color/primary_light"
            app:fabSize="mini"
            app:srcCompat="@drawable/playlist_icon" />
    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:background="#C0B3E5FC"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/scoreTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/score_image_description"
            android:textColor="@color/primary_text"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:text="#SCORE#"
            android:textColor="@color/primary_text"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/scoreTitleText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/songDistanceTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:text="@string/distance_image_description"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreTitleText" />

        <TextView
            android:id="@+id/songDistanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:text="#DIST#"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/songDistanceTitleText"
            app:layout_constraintTop_toBottomOf="@+id/scoreText" />

        <TextView
            android:id="@+id/songsFoundTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/songs_found"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/songDistanceTitleText" />

        <TextView
            android:id="@+id/songsFoundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:text="#F#"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/songsFoundTitleText"
            app:layout_constraintTop_toBottomOf="@+id/songDistanceText" />

        <TextView
            android:id="@+id/songsSkippedTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/songs_skipped"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/songsFoundText"
            app:layout_constraintTop_toBottomOf="@+id/songDistanceTitleText" />

        <TextView
            android:id="@+id/songsSkippedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:text="#S#"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/songsSkippedTitleText"
            app:layout_constraintTop_toBottomOf="@+id/songDistanceText" />

        <TextView
            android:id="@+id/songsTotalTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/total_songs"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/songsSkippedText"
            app:layout_constraintTop_toBottomOf="@+id/songDistanceTitleText" />

        <TextView
            android:id="@+id/songsTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:text="#T#"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/songsTotalTitleText"
            app:layout_constraintTop_toBottomOf="@+id/songDistanceText" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/locationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>