<resources>
    <string name="app_name">Songle</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_difficulty">Select Difficulty</string>
    <string name="dialog_new_game_message">Starting a new game will reset your progress so far. Do you wish to continue?</string>
    <string name="dialog_new_game_title">New Game</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="dialog_lyric_title">Lyric selected</string>
    <string name="dialog_lyric_message">Select from the options below.</string>
    <string-array name="difficulties">
        <item>Painful</item>
        <item>Hard</item>
        <item>Medium</item>
        <item>Easy</item>
        <item>Extremely Easy</item>
    </string-array>
    <string-array name="connection_settings">
        <item>Use only WiFi</item>
        <item>Use Data &amp; WiFi</item>
    </string-array>

    <string name="new_game_toast">New Game Started!</string>
    <string name="continue_toast">Game continued!</string>
    <string name="difficulty_easy">5</string>
    <string name="score_image_description">Score: </string>
    <string name="dialog_submit_title">Guess the Song</string>
    <string name="submit">Submit</string>
    <string name="dialog_complete_title">Congratulations!</string>
    <string name="subtitle_main">Test your music knowledge while exploring George Square Campus</string>
    <string name="songs_not_loaded_error">Songs not loaded. Check your connection.</string>
    <string name="lyrics_connection_error">Lyrics not loaded. Check your connection.</string>
    <string name="distance_image_description">Distance walked this song: </string>
    <string name="dialog_skip_song_title">Skip Song</string>
    <string name="skip">Skip</string>
    <string name="title_activity_lyrics">Lyrics Found</string>
    <string name="internet_connection_toast">You need an internet connection to play the game!</string>
    <string name="toast_connection">Please check your connection, for Songle to download the songs</string>
    <string name="dialog_skipped_msg" formatted="false">You\'ve skipped the song. \nYou\'ve walked %dm failing to guess the song.</string>
    <string name="dialog_correct_msg" formatted="false">You\'ve progressed to the next song! \nYou\'ve walked %dm earning you %d bonus points trying to guess: \n%s - %s.</string>
    <string name="toast_location_error">Please open location services before trying to zoom to your location</string>
    <string name="toast_no_points">Not enough points to complete action.</string>
    <string name="toast_score_zero">Your score dropped to zero, but you can still keep guessing the song.</string>
    <string name="dialog_submit" formatted="false">Enter the title of the song. \nCorrect: +%d points. \nWrong: -%d points.</string>
    <string name="dialog_title_skipped">Skipped song :(</string>
    <string name="dialog_title_correct">Congrats!</string>
    <string name="listen_youtube">Listen on Youtube</string>
    <string name="toast_wrong_song">Wrong Song :( Try Again.</string>
    <string name="toast_revealed">"Yay! You\'ve revealed: "</string>
    <string name="toast_collected">"Congratulations! You\'ve collected: "</string>
    <string name="toast_error_location_track">You must open location services and track your location first!</string>
    <string name="dialog_completed_skipped_message" formatted="false">Game Completed!\nFinal score: %d\nYou\'ve guessed %d out of %d songs.</string>
    <string name="dialog_completed_correct_message" formatted="false">Game completed!\nLast guess: %s - %s \nFinal score: %d \nYou\'ve guessed %d out of %d songs.</string>
    <string name="dialog_stats_message" formatted="false">Total distance travelled: %dm\n\nHighest score: %d\n\nTotal number of songs found: %d\n\nGuessing Accuracy: %d%%</string>
    <string name="dialog_connection_title">Choose data connection settings</string>
    <string name="toast_wifi_only">Downloads are only over WiFi now!</string>
    <string name="toast_wifi_data">Downloads are allowed with both WiFi and Data now!</string>
    <string name="stats">Stats</string>
    <string name="songs_found">Songs Found:</string>
    <string name="songs_skipped">Songs Skipped:</string>
    <string name="total_songs">Total Songs:</string>

</resources>
