<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iamstelios.songle.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/subtitle_main"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoTitle"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/LogoTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/songle_main_title" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Subtitle">

        <ImageButton
            android:id="@+id/NewGameButton"
            style="@style/ButtonsMain"
            android:contentDescription="New Game"
            app:srcCompat="@drawable/new_game" />

        <ImageButton
            android:id="@+id/ContinueButton"
            style="@style/ButtonsMain"
            android:contentDescription="Continue"
            app:srcCompat="@drawable/continue_game" />

        <ImageButton
            android:id="@+id/StatsButton"
            style="@style/ButtonsMain"
            android:contentDescription="Stats"
            app:srcCompat="@drawable/stats" />

        <ImageButton
            android:id="@+id/ConnectionButton"
            style="@style/ButtonsMain"
            android:contentDescription="Connection"
            app:srcCompat="@drawable/connection" />

        <ImageButton
            android:id="@+id/HelpButton"
            style="@style/ButtonsMain"
            android:contentDescription="Help"
            app:srcCompat="@drawable/help" />

        <ImageButton
            android:id="@+id/MusicButton"
            style="@style/ButtonsMain"
            android:contentDescription="Music"
            app:srcCompat="@drawable/music_on" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
